# toml-version-finder

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  app.py  config.py  exceptions.py  file_fetchers.py  pyproject.toml  toml_version_finder.py  validators.py  version_finders.py
.github/: CODEOWNERS  renovate.json
.github/workflows/: autofix-pre-commit.yaml  check-build-deploy.yaml  check-build-publish.yaml
app/: config.py  exceptions.py  file_fetchers.py  main.py  validators.py  version_finders.py
