[project]
name = "toml-version-finder"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "starlette",
    "uvicorn-worker",
    "gunicorn",
    "gidgethub",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "yamllint",
    "uvicorn",
    "mypy>=1.12",
    "ruff>=0.4",
]


[tool.mypy]
exclude = ["venv/", "examples/"]
extra_checks = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true


[tool.ruff]
output-format = "concise"
line-length = 95
target-version ="py312"
extend-exclude = [
    "venv/",
    "examples/",
    ".vscode",
    ".idea",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "DTZ",
    "T",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "ERA",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "DOC",
    "RUF",
]
fixable = [
    "I001",
    "TCH",
    "F401",
    "F541",
    "F632",
    "F811",
    "F901",
    "E2",
    "E3",
    "E401",
    "E502",
    "E703",
    "E71",
    "W29",
    "W391",
    "D2",
    "D3",
    "D400",
    "D406",
    "D415",
    "UP",
    "YTT",
    "B004",
    "EXE004",
    "G010",
    "PIE",
    "PYI009",
]
ignore = [
    "D203",
    "D212",
    "N806",
    "S603",
    "ANN101",
    "ANN102",
    "Q003",
    "TD002",
    "TD003",
    "SIM910",
    "PIE808",
]
task-tags = [
    "TODO",
    "FIXME",
    "HACK",
    "BUG",
    "NOBUG",
    "REQ",
    "IDEA",
    "NOTE",
    "ISSUE",
    "DONE",
]
external = ["CAR", "TXB"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 95

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "bytes", "int"]
max-args = 7
max-returns = 10
max-branches = 19
