[dependency-groups]
dev = [
    "uvicorn",
    { include-group = "lint-format" },
    { include-group = "pre-commit" },
    { include-group = "type-check" },
]
lint-format = ["ruff>=0.4"]
pre-commit = ["pre-commit"]
type-check = ["mypy>=1.12"]

[project] # TODO: Remove [project] table once https://github.com/astral-sh/uv/issues/8582 is completed
authors = [{ name = "Matt Norton", email = "matt@carrotmanmatt.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp",
    "gidgethub",
    "gunicorn",
    "packaging",
    "starlette",
    "typed_classproperties>=1.1",
    "uvicorn-worker",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "toml-version-finder"
requires-python = ">=3.12"
version = "1.0.0"

[project.urls]
Repository = "https://github.com/CarrotManMatt/toml-version-finder"


[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["aiohttp"]


[tool.ruff]
indent-width = 4
line-length = 95
output-format = "concise"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "C90",
    "COM812",
    "COM819",
    "CPY",
    "D206",
    "D212",
    "DJ",
    "FA",
    "FAST",
    "INP001",
    "ISC001",
    "ISC002",
    "N806",
    "PD",
    "PIE808",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "S603",
    "SIM910",
    "TD002",
    "TD003",
    "W191",
]
select = ["ALL", "D204", "D213", "D401"]
task-tags = ["BUG", "DONE", "FIXME", "HACK", "IDEA", "ISSUE", "NOBUG", "NOTE", "REQ", "TODO"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
strict = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "typed_classproperties.cached_classproperty",
    "typed_classproperties.classproperty",
]
extend-ignore-names = [
    "BROKEN_*_MESSAGE",
    "DEFAULT_MESSAGE",
    "INVALID_*_MESSAGE",
    "NO_*_MESSAGE",
    "STATUS_CODE",
    "_BaseCustomException",
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 95

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = [
    "typed_classproperties.cached_classproperty",
    "typed_classproperties.classproperty",
]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 7
max-branches = 19
max-returns = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.uv]
default-groups = ["dev"]
no-binary-package = ["toml-version-finder"]
no-build = true
package = false
